--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -13,6 +13,9 @@
 	<arg name="extensions" value="php"/>
 	<file>./src</file>
 
+	<!-- Disable warnings -->
+	<arg name="show_warnings" value="0"/>
+
 	<!-- Show sniff codes in all reports -->
 	<arg value="s"/>
 </ruleset>
