--- a/.travis.yml
+++ b/.travis.yml
@@ -70,8 +70,7 @@ script:
 deploy:
   provider: script
   skip_cleanup: true
-  script: ./bin/deploy.sh
+  script: sh ./bin/deploy.sh
   on:
     branch: testing
-    php: 5.6
-    env: WP_TRAVISCI=phpcs
+    php: 5.3
