--- a/.travis.yml
+++ b/.travis.yml
@@ -21,23 +21,6 @@ matrix:
   include:
     - php: 7.2
       env: WP_VERSION=latest
-    - php: 7.1
-      env: WP_VERSION=latest
-    - php: 7.0
-      env: WP_VERSION=latest
-    - php: 5.6
-      env: WP_VERSION=4.3
-    - php: 5.6
-      env: WP_VERSION=latest
-    - php: 5.6
-      env: WP_VERSION=trunk
-    - php: 5.6
-      env: WP_TRAVISCI=phpcs
-    - php: 5.4
-      env: WP_VERSION=latest
-    - php: 5.3
-      env: WP_VERSION=latest
-      dist: precise
 
 before_script:
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
@@ -70,7 +53,7 @@ script:
 deploy:
   provider: script
   skip_cleanup: true
-  script: sh ./bin/deploy.sh
+  script: sh bin/deploy.sh
   on:
     branch: testing
-    php: 5.3
+    php: 7.2
